Fix height of section on mobile design

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 section {
   background-color: hsl(240, 5%, 91%);
   width: 340px;
-  height: 550px;
+  height: 590px;
   border-radius: 20px;
   margin-top: 45px;
   margin-bottom: 15px;
